core(Documentation): Translation and templates

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-# Configuration pour GitHub Packages
-@eth3rnit3:registry=https://npm.pkg.github.com
+# Configuration for GitHub Packages
+@archivisio:registry=https://npm.pkg.github.com
