--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           node-version: '20'
           registry-url: 'https://npm.pkg.github.com'
-          scope: '@eth3rnit3'
+          scope: '@archivisio'
 
       - name: Cache dependencies
         uses: actions/cache@v4
@@ -58,7 +58,7 @@ jobs:
           cp package.json package.json.backup
           
           # Update package name for GitHub Packages
-          npm pkg set name="@eth3rnit3/c4-modelizer-sdk"
+          npm pkg set name="@archivisio/c4-modelizer-sdk"
           
           # Add publishConfig for GitHub Packages
           npm pkg set publishConfig.registry="https://npm.pkg.github.com"
@@ -66,7 +66,7 @@ jobs:
           
           # Add repository field if not present
           npm pkg set repository.type="git"
-          npm pkg set repository.url="git+https://github.com/eth3rnit3/c4-modelizer-sdk.git"
+          npm pkg set repository.url="git+https://github.com/archivisio/c4-modelizer-sdk.git"
 
       - name: Publish to GitHub Packages
         run: npm publish
@@ -83,8 +83,8 @@ jobs:
     steps:
       - name: Test package installation
         run: |
-          npm config set @eth3rnit3:registry https://npm.pkg.github.com
+          npm config set @archivisio:registry https://npm.pkg.github.com
           npm config set //npm.pkg.github.com/:_authToken ${{ secrets.GITHUB_TOKEN }}
-          npm install @eth3rnit3/c4-modelizer-sdk
+          npm install @archivisio/c4-modelizer-sdk
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
