--- a/package.json
+++ b/package.json
@@ -57,13 +57,18 @@
     "@xyflow/react": "^12.6.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.29.0",
+    "@types/jest": "^29.5.14",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
-    "typescript": "~5.7.2",
-    "vite": "^6.3.4",
     "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.22.0",
+    "eslint": "^9.29.0",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "globals": "^15.15.0",
     "jest": "^29.7.0",
-    "@types/jest": "^29.5.14"
+    "typescript": "~5.7.2",
+    "typescript-eslint": "^8.26.0",
+    "vite": "^6.3.4"
   }
 }
